Fix auth and jwt issue
