# cmd/api/auth.go
@@ -49,9 +49,6 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	user := &store.User{
 		Username: payload.Username,
 		Email:    payload.Email,
-		Role: store.Role{
-			Name: "user",
-		},
 	}
 
 	// hash the user password
