# cmd/api/middleware.go
@@ -9,7 +9,6 @@ import (
 	"strings"
 
 	"github.com/golang-jwt/jwt/v5"
-	"github.com/kandlagifari/go-nakama-apps/internal/store"
 )
 
 func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
@@ -35,13 +34,19 @@ func (app *application) AuthTokenMiddleware(next http.Handler) http.Handler {
 
 		claims, _ := jwtToken.Claims.(jwt.MapClaims)
 
-		user, err := strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10, 64)
+		userID, err := strconv.ParseInt(fmt.Sprintf("%.f", claims["sub"]), 10, 64)
 		if err != nil {
 			app.unauthorizedErrorResponse(w, r, err)
 			return
 		}
 
 		ctx := r.Context()
+
+		user, err := app.store.Users.GetByID(ctx, userID)
+		if err != nil {
+			app.unauthorizedErrorResponse(w, r, err)
+			return
+		}
 
 		ctx = context.WithValue(ctx, userCtx, user)
 		next.ServeHTTP(w, r.WithContext(ctx))
@@ -85,38 +90,4 @@ func (app *application) BasicAuthMiddleware() func(http.Handler) http.Handler {
 			next.ServeHTTP(w, r)
 		})
 	}
-}
-
-func (app *application) checkPostOwnership(requiredRole string, next http.HandlerFunc) http.HandlerFunc {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		user := getUserFromContext(r)
-		post := getPostFromCtx(r)
-
-		if post.UserID == user.ID {
-			next.ServeHTTP(w, r)
-			return
-		}
-
-		allowed, err := app.checkRolePrecedence(r.Context(), user, requiredRole)
-		if err != nil {
-			app.internalServerError(w, r, err)
-			return
-		}
-
-		if !allowed {
-			app.forbiddenResponse(w, r)
-			return
-		}
-
-		next.ServeHTTP(w, r)
-	})
-}
-
-func (app *application) checkRolePrecedence(ctx context.Context, user *store.User, roleName string) (bool, error) {
-	role, err := app.store.Roles.GetByName(ctx, roleName)
-	if err != nil {
-		return false, err
-	}
-
-	return user.Role.Level >= role.Level, nil
 }
