# docs/swagger.json
@@ -681,12 +681,6 @@
                 "is_active": {
                     "type": "boolean"
                 },
-                "role": {
-                    "$ref": "#/definitions/store.Role"
-                },
-                "role_id": {
-                    "type": "integer"
-                },
                 "token": {
                     "type": "string"
                 },
@@ -803,23 +797,6 @@
                 }
             }
         },
-        "store.Role": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "level": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "store.User": {
             "type": "object",
             "properties": {
@@ -834,12 +811,6 @@
                 },
                 "is_active": {
                     "type": "boolean"
-                },
-                "role": {
-                    "$ref": "#/definitions/store.Role"
-                },
-                "role_id": {
-                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
